--- a/assets/style.css
+++ b/assets/style.css
@@ -15,6 +15,7 @@ body {
 
     background-color: #ffffff;
     color: #2a2a2a;
+    overflow-x: hidden;
 }
 
 h1 {
@@ -47,7 +48,7 @@ nav a {
 
 main {
     position: relative;
-    z-index: 0;
+    z-index: 1;
     background-color: #ffffff;
     min-height: 100vh;
     transition: transform 0.5s;
@@ -57,10 +58,78 @@ main.open {
     transform: translate(240px, 0);
 }
 
-/* a.toggle-nav img {
-    width: 20px;
-    height: 20px;
-} */
+a.toggle-nav {
+    position: fixed;
+    top: 0;
+    left: 0;
+    padding: 24px;
+    text-decoration: none;
+    color: #2a2a2a;
+
+}
+
+a.toggle-nav img {
+    margin: 0 5px 0 0;
+    vertical-align: middle;
+}
+
+section {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+}
+
+section div {
+    width: 350px;
+}
+
+section div.content {
+    margin: 0 0 0 60px;
+}
+
+h1 {
+    font-family: "Young Serif";
+    font-size: 48px;
+    line-height: 1.2;
+}
+
+p {
+    margin: 20px 0 20px 0;
+}
+
+a.button {
+    display: inline-block;
+    background-color: #00b98d;
+    color: #ffffff;
+    text-decoration: none;
+    padding: 10px 15px 10px 15px;
+    border-radius: 3px;
+}
+
+div.slides {
+    height: 475px;
+    position: relative;
+}
+
+div.slides img { 
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+div.slides img:first-child { 
+    z-index: 1;
+}
+
+
+
+
+
+
+
+
+
 
 
 
